--- a/update_hosts.yml
+++ b/update_hosts.yml
@@ -1,6 +1,6 @@
 ---
 - name: Register infrastructure server to Satellite
-  hosts: "{{ idm_hosts }}"
+  hosts: all
   tasks:
     - name: update hosts to latest patch levels
       yum:
