--- a/ping_hosts.yml
+++ b/ping_hosts.yml
@@ -1,6 +1,6 @@
 ---
 - name: This is a simple utility to ping hosts
-  hosts: all
+  hosts: "{{ idm_hosts }}"
   tasks:
     - name: ping module
       ping:
